--- a/index.html
+++ b/index.html
@@ -47,9 +47,10 @@
 <body>
     <header>
         <h1>Krishnavamshi Chinthala</h1>
-        <p>Email: ckrishnavamshi595@gmail.com</p>
+        <p>Email: ckrishnavamshi23@gmail.com</p>
         <p>Phone: +91 9398837595</p>
         <p>Location: Hyderabad, India</p>
+        <p>https://github.com/krishnavamshi933</p>
     </header>
 
     <section>
@@ -59,7 +60,8 @@
 
     <section>
         <h2>Education:</h2>
-        <ul>
+        <ul> 
+            <li> Master of computer applications (MCA) <br> Osmania University,Hyderabad, India<br> </li>
             <li>B.Sc in Computer Science<br>Osmania University, Hyderabad, India<br>Percentage: 86.4%</li>
         </ul>
     </section>
